<?xml version="1.0"?>
<package format="3">
  <name>depthai_filters_v3</name>
  <version>3.1.1</version>
  <description>Depthai filters package</description>
  <author>Adam Serafin</author>
  <!-- temporary -->
  <maintainer email="matevz.morato@luxonis.com">Matevz Morato</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>vision_msgs</depend>
  <depend>message_filters</depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>visualization_msgs</depend>
  <depend>depthai_ros_msgs_v3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
