<?xml version="1.0"?>
<package format="3">
    <name>depthai_examples_v3</name>
    <version>3.2.0</version>
    <description>The depthai_examples_v3 package</description>

    <author>Adam Serafin</author>
    <author>Sachin Guruswamy</author>

    <!-- temporary -->
    <maintainer email="matevz.morato@luxonis.com">Matevz Morato</maintainer>

    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>backward_ros</depend>
    <depend>camera_info_manager</depend>
    <depend>cv_bridge</depend>
    <depend version_gte="3.6.1">depthai_v3</depend>
    <depend>depthai_bridge_v3</depend>
    <depend>depthai_descriptions_v3</depend>
    <depend>depthai_ros_msgs_v3</depend>
    <depend>foxglove_msgs</depend>
    <depend>image_transport</depend>
    <depend>libopencv-dev</depend>
    <depend>rclcpp</depend>
    <depend>ros_environment</depend>
    <depend>rviz_imu_plugin</depend>
    <depend>sensor_msgs</depend>
    <depend>stereo_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>std_msgs</depend>
    <depend>vision_msgs</depend>

    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>depth_image_proc</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
