<?xml version="1.0"?>
<package format="3">
  <name>depthai_ros_driver_v3</name>
  <version>3.2.0</version>
  <description>Depthai ROS Monolithic node.</description>
  <author>Adam Serafin</author>
  <!-- temporary -->
  <maintainer email="matevz.morato@luxonis.com">Matevz Morato</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>ament_cmake_auto</depend>
  <depend>backward_ros</depend>
  <depend>camera_calibration</depend>
  <depend>camera_info_manager</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_transport_plugins</depend>
  <depend>image_pipeline</depend>
  <depend version_gte="3.6.1">depthai_v3</depend>
  <depend>depthai_bridge_v3</depend>
  <depend>depthai_descriptions_v3</depend>
  <depend>depthai_ros_msgs_v3</depend>
  <depend>pluginlib</depend>
  <depend>diagnostic_updater</depend>
  <depend>diagnostic_msgs</depend>
  <depend>ffmpeg_image_transport_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
