<?xml version="1.0"?>
<package format="3">
    <name>depthai_bridge_v3</name>
    <version>3.2.0</version>
    <description>The depthai_bridge_v3 package</description>

    <author>Sachin Guruswamy</author>
    <author>Adam Serafin</author>

    <!-- temporary -->
    <maintainer email="matevz.morato@luxonis.com">Matevz Morato</maintainer>

    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>libboost-dev</depend>
    <depend>rclcpp</depend>

    <test_depend>ament_cmake_gtest</test_depend>
    <depend>cv_bridge</depend>
    <depend>camera_info_manager</depend>
    <depend version_gte="3.6.1">depthai_v3</depend>
    <depend>depthai_ros_msgs_v3</depend>
    <depend>image_transport</depend>
    <depend>libopencv-dev</depend>
    <depend>ros_environment</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>stereo_msgs</depend>
    <depend>vision_msgs</depend>
    <depend>ffmpeg_image_transport_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>composition_interfaces</depend>

    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
