<?xml version="1.0"?>
<package format="3">
  <name>depthai_descriptions_v3</name>
  <version>3.2.0</version>
  <description>The depthai_descriptions_v3 package</description>

  <author>Adam Serafin</author>

  <!-- temporary -->
  <maintainer email="matevz.morato@luxonis.com">Matevz Morato</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>

</package>
